# clodecode

./: .gitignore  README.md  build-desktop.bat  install.bat  pyproject.toml  requirements.txt  run-webapp.bat  run.bat  setup-webapp.bat
capcut_auto/: __init__.py  audio_mix.py  bgm_recommend.py  categories.py  category_rules.py  cli.py  cutlist.py  draft_builder.py  gui.py  hooks.py  pipeline.py  project_store.py  server.py  sfx_recommend.py  shooting_guide.py  shooting_guide_v2.py  silence.py  stutter.py  subtitles.py  timeline.py  transcribe.py  visual_correction.py
category-rules/: beauty.json  camping.json  cleaning.json  common.json  food.json  living.json  parenting.json  travel.json
desktop/: main.js  package.json  setup-progress.html  setup.js
tests/: ai_test_helpers.py  test_ai_client.py  test_ai_cut_apply.py  test_ai_cut_candidates.py  test_ai_fallback_and_category.py  test_ai_hook.py  test_ai_subtitle_highlight.py  test_ai_subtitle_optimizer.py  test_ai_timeline_recalc.py  test_audio_mix.py  test_audio_mix_integration.py  test_bgm_recommend.py  test_categories.py  test_category_rules.py  test_cli.py  test_cli_dry_run.py  test_cutlist.py  test_draft_builder_integration.py  test_final_integration.py  test_hooks.py  test_pipeline.py  test_server.py  test_sfx_recommend.py  test_shooting_guide.py  test_shooting_guide_v2.py  test_silence_binary_resolution.py  test_stutter.py  test_subtitles.py  test_timeline.py  test_visual_correction.py  test_visual_correction_integration.py  test_visual_frame_extraction.py  test_visual_reframe.py  (+2 more)
webapp/: .env.development  (+3 more)
(+76 files in other folders)
