[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capcut-auto"
version = "0.1.0"
description = "pycapcut 기반 CapCut 무음/버벅임 자동 컷 + 자막 자동 생성 파이프라인"
requires-python = ">=3.8"
dependencies = [
    "pycapcut>=0.0.3",
    "faster-whisper>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
capcut-auto = "capcut_auto.cli:main"

[project.gui-scripts]
capcut-auto-gui = "capcut_auto.gui:main"

[tool.setuptools]
packages = ["capcut_auto"]
